--- a/wwstatviz-webapp/src/wwstatviz-webapp/templates/layouts/main/_js.html
+++ b/wwstatviz-webapp/src/wwstatviz-webapp/templates/layouts/main/_js.html
@@ -1,4 +1,2 @@
-<script src="{{ url_for('static', filename = 'lib/jquery/jquery.min.js') }}"></script> 
-<script src="{{ url_for('static', filename = 'lib/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
-
-<script src="{{ url_for('static', filename = 'js/mtruncate.js') }}"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
